[gd_scene load_steps=7 format=3 uid="uid://dovclayfphu6p"]

[ext_resource type="Script" path="res://addons/GameTemplate/GUI/OptionsSections/Controls.gd" id="1"]
[ext_resource type="FontFile" path="res://addons/GameTemplate/Assets/Fonts/pixellocale_8.tres" id="2"]
[ext_resource type="Theme" uid="uid://bjy6d6iusj4lk" path="res://addons/GameTemplate/GUI/default_theme.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://de226x33vcwm8" path="res://addons/GameTemplate/GUI/BindingPopup/Popup.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://dp81qs74tu3ba" path="res://addons/GameTemplate/GUI/Buttons/DefaultButton.tscn" id="5"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.0235294, 0.0196078, 0.0352941, 1)
corner_detail = 1

[node name="Controls" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("3")
theme_override_constants/separation = 1
script = ExtResource("1")

[node name="Section" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Section"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 2.0
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Section/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ActionsSection" type="VBoxContainer" parent="Section/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="Section/MarginContainer/ScrollContainer/ActionsSection"]
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="Actions" type="Label" parent="Section/MarginContainer/ScrollContainer/ActionsSection/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2")
theme_override_font_sizes/font_size = 18
text = "Actions"

[node name="ScrollContainer" type="ScrollContainer" parent="Section/MarginContainer/ScrollContainer/ActionsSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true

[node name="ActionList" type="VBoxContainer" parent="Section/MarginContainer/ScrollContainer/ActionsSection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Popup" parent="Section" groups=["KeyBinding"] instance=ExtResource("4")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Back" parent="MarginContainer/VBoxContainer" groups=["Controls"] instance=ExtResource("5")]
layout_mode = 2
text = "Back"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Default" parent="MarginContainer/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2
text = "Default"

[node name="Control3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Default" to="." method="_on_Default_pressed"]
